skip link color contrast fix

--- a/styles/PageHeader.module.scss
+++ b/styles/PageHeader.module.scss
@@ -12,10 +12,8 @@
     top: 0;
     z-index: 4;
     color: white;
-    // background: black;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 55%, rgba(0, 212, 255, 0) 100%);
-    // height: 50px;
-    padding-top: 44px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 40px, rgba(0, 212, 255, 0) 100%);
+    padding-top: 10px;
     padding-bottom: 20px;
     a {
       font-size: 20px;
@@ -39,8 +37,6 @@
   color: #fff;
   text-align: center;
   margin-left: 30px;
-  // @include for-size(small-only) {
-  // }
 }
 .skip-links {
   position: absolute;
@@ -48,11 +44,13 @@
   height: 0;
   width: 0;
   overflow: hidden;
+  color: $white;
+  padding: 0 $space-s;
   &:focus {
     height: auto;
     width: auto;
-    border: solid 1px white;
-    background: black;
+    border: solid 1px $white;
+    background: $black;
   }
 }
 .desktop-site-title,
@@ -67,8 +65,8 @@
   position: fixed;
   top: 0;
   width: 100%;
-  transition: all 0.25s ease;
-  animation: smoothScroll 0.5s forwards;
+  transition: all 0.5s ease;
+  animation: smoothScroll 0.3s forwards;
   background: $charcoal;
   padding-bottom: 0;
   @media only screen and (min-width: 1023px) {
@@ -83,6 +81,6 @@
   }
 
   100% {
-    transform: translateY(0px);
+    transform: translateY(0);
   }
 }
